--- a/build.gradle
+++ b/build.gradle
@@ -3,13 +3,13 @@ buildscript {
     rootProject.ext.kotlin_version = "1.3.50"
     rootProject.ext.plugin_local_debug = false
     repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
         if (rootProject.ext.plugin_local_debug) {
             maven { url uri('plugin-sentry/plugins') }
         }
-        mavenCentral()
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.2.0"
@@ -17,7 +17,8 @@ buildscript {
         if (rootProject.ext.plugin_local_debug) {
             classpath "com.yl.lib.plugin:plugin-sentry:0.0.3.5-SNAPSHOT"
         } else {
-            classpath 'com.github.allenymt.PrivacySentry:plugin-sentry:1.2.8'
+//            classpath 'com.github.allenymt.PrivacySentry:plugin-sentry:1.2.8'
+            classpath "com.github.Yuphee.PrivacySentry:plugin-sentry:1.1.9"
         }
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         // NOTE: Do not place your application dependencies here; they belong
@@ -27,13 +28,13 @@ buildscript {
 
 allprojects {
     repositories {
+        mavenCentral()
+        maven { url 'https://jitpack.io' }
         if (rootProject.ext.plugin_local_debug) {
             maven { url uri('plugin-sentry/plugins') }
         }
-        mavenCentral()
         google()
         jcenter()
-        maven { url 'https://jitpack.io' }
     }
 }
 
