--- a/privacy-proxy/build.gradle
+++ b/privacy-proxy/build.gradle
@@ -32,10 +32,18 @@ android {
     }
 }
 
+repositories {
+    flatDir {
+        dirs 'libs'
+    }
+}
+
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'com.google.android.material:material:1.4.0'
+    api(name: 'oaid_sdk_1.0.25', ext: 'aar')
     implementation project(":hook-sentry")
     implementation project(path: ':privacy-annotation')
 }
